adding an option for an actual extract

--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,102 @@ pyvenv.cfg
 justice-testing.db
 as-actual-ostrava-2021.xml
 as-actual-ostrava-2021-test.xml
+Scripts/_asyncio.pyd
+Scripts/_bz2.pyd
+Scripts/_ctypes_test.pyd
+Scripts/_ctypes.pyd
+Scripts/_decimal.pyd
+Scripts/_elementtree.pyd
+Scripts/_hashlib.pyd
+Scripts/_lzma.pyd
+Scripts/_msi.pyd
+Scripts/_multiprocessing.pyd
+Scripts/_overlapped.pyd
+Scripts/_queue.pyd
+Scripts/_socket.pyd
+Scripts/_sqlite3.pyd
+Scripts/_ssl.pyd
+Scripts/_testbuffer.pyd
+Scripts/_testcapi.pyd
+Scripts/_testconsole.pyd
+Scripts/_testimportmultiple.pyd
+Scripts/_testinternalcapi.pyd
+Scripts/_testmultiphase.pyd
+Scripts/_tkinter.pyd
+Scripts/activate
+Scripts/activate_this.py
+Scripts/activate.bat
+Scripts/activate.fish
+Scripts/activate.ps1
+Scripts/activate.xsh
+Scripts/api-ms-win-core-console-l1-1-0.dll
+Scripts/api-ms-win-core-datetime-l1-1-0.dll
+Scripts/api-ms-win-core-debug-l1-1-0.dll
+Scripts/api-ms-win-core-errorhandling-l1-1-0.dll
+Scripts/api-ms-win-core-file-l1-1-0.dll
+Scripts/api-ms-win-core-file-l1-2-0.dll
+Scripts/api-ms-win-core-file-l2-1-0.dll
+Scripts/api-ms-win-core-handle-l1-1-0.dll
+Scripts/api-ms-win-core-heap-l1-1-0.dll
+Scripts/api-ms-win-core-interlocked-l1-1-0.dll
+Scripts/api-ms-win-core-libraryloader-l1-1-0.dll
+Scripts/api-ms-win-core-localization-l1-2-0.dll
+Scripts/api-ms-win-core-memory-l1-1-0.dll
+Scripts/api-ms-win-core-namedpipe-l1-1-0.dll
+Scripts/api-ms-win-core-processenvironment-l1-1-0.dll
+Scripts/api-ms-win-core-processthreads-l1-1-0.dll
+Scripts/api-ms-win-core-processthreads-l1-1-1.dll
+Scripts/api-ms-win-core-profile-l1-1-0.dll
+Scripts/api-ms-win-core-rtlsupport-l1-1-0.dll
+Scripts/api-ms-win-core-string-l1-1-0.dll
+Scripts/api-ms-win-core-synch-l1-1-0.dll
+Scripts/api-ms-win-core-synch-l1-2-0.dll
+Scripts/api-ms-win-core-sysinfo-l1-1-0.dll
+Scripts/api-ms-win-core-timezone-l1-1-0.dll
+Scripts/api-ms-win-core-util-l1-1-0.dll
+Scripts/api-ms-win-crt-conio-l1-1-0.dll
+Scripts/api-ms-win-crt-convert-l1-1-0.dll
+Scripts/api-ms-win-crt-environment-l1-1-0.dll
+Scripts/api-ms-win-crt-filesystem-l1-1-0.dll
+Scripts/api-ms-win-crt-heap-l1-1-0.dll
+Scripts/api-ms-win-crt-locale-l1-1-0.dll
+Scripts/api-ms-win-crt-math-l1-1-0.dll
+Scripts/api-ms-win-crt-multibyte-l1-1-0.dll
+Scripts/api-ms-win-crt-private-l1-1-0.dll
+Scripts/api-ms-win-crt-process-l1-1-0.dll
+Scripts/api-ms-win-crt-runtime-l1-1-0.dll
+Scripts/api-ms-win-crt-stdio-l1-1-0.dll
+Scripts/api-ms-win-crt-string-l1-1-0.dll
+Scripts/api-ms-win-crt-time-l1-1-0.dll
+Scripts/api-ms-win-crt-utility-l1-1-0.dll
+Scripts/concrt140.dll
+Scripts/deactivate.bat
+Scripts/libffi-7.dll
+Scripts/msvcp140_1.dll
+Scripts/msvcp140_2.dll
+Scripts/msvcp140.dll
+Scripts/pip-3.8.exe
+Scripts/pip.exe
+Scripts/pip3.8.exe
+Scripts/pip3.exe
+Scripts/pydoc.bat
+Scripts/pyexpat.pyd
+Scripts/python.exe
+Scripts/python3.dll
+Scripts/python38.dll
+Scripts/pythonw.exe
+Scripts/select.pyd
+Scripts/tcl86t.dll
+Scripts/tk86t.dll
+Scripts/ucrtbase.dll
+Scripts/unicodedata.pyd
+Scripts/vccorlib140.dll
+Scripts/vcomp140.dll
+Scripts/vcruntime140.dll
+Scripts/wheel-3.8.exe
+Scripts/wheel.exe
+Scripts/wheel3.8.exe
+Scripts/wheel3.exe
+Scripts/winsound.pyd
+Scripts/xlwings32-0.20.7.dll
+Scripts/xlwings64-0.20.7.dll
