adding an option to display registerd capital

--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,139 @@ Scripts/wheel3.exe
 Scripts/winsound.pyd
 Scripts/xlwings32-0.20.7.dll
 Scripts/xlwings64-0.20.7.dll
+data/as-full-brno-2021.xml
+data/as-full-ceske_budejovice-2021.xml
+data/as-full-hradec_kralove-2021.xml
+data/as-full-ostrava-2021.xml
+data/as-full-plzen-2021.xml
+data/as-full-praha-2021.xml
+data/as-full-usti_nad_labem-2021.xml
+data/dr-full-brno-2021.xml
+data/dr-full-ceske_budejovice-2021.xml
+data/dr-full-hradec_kralove-2021.xml
+data/dr-full-ostrava-2021.xml
+data/dr-full-plzen-2021.xml
+data/dr-full-praha-2021.xml
+data/dr-full-usti_nad_labem-2021.xml
+data/evrdrspol-full-ostrava-2021.xml
+data/evrdrspol-full-praha-2021.xml
+data/evrhzs-full-hradec_kralove-2021.xml
+data/evrhzs-full-ostrava-2021.xml
+data/evrhzs-full-praha-2021.xml
+data/evrhzs-full-usti_nad_labem-2021.xml
+data/evrspol-full-brno-2021.xml
+data/evrspol-full-ceske_budejovice-2021.xml
+data/evrspol-full-hradec_kralove-2021.xml
+data/evrspol-full-ostrava-2021.xml
+data/evrspol-full-plzen-2021.xml
+data/evrspol-full-praha-2021.xml
+data/evrspol-full-usti_nad_labem-2021.xml
+data/ks-full-brno-2021.xml
+data/ks-full-ceske_budejovice-2021.xml
+data/ks-full-hradec_kralove-2021.xml
+data/ks-full-ostrava-2021.xml
+data/ks-full-plzen-2021.xml
+data/ks-full-praha-2021.xml
+data/ks-full-usti_nad_labem-2021.xml
+data/nad-full-brno-2021.xml
+data/nad-full-ceske_budejovice-2021.xml
+data/nad-full-hradec_kralove-2021.xml
+data/nad-full-ostrava-2021.xml
+data/nad-full-plzen-2021.xml
+data/nad-full-praha-2021.xml
+data/nad-full-usti_nad_labem-2021.xml
+data/nadf-full-brno-2021.xml
+data/nadf-full-ceske_budejovice-2021.xml
+data/nadf-full-hradec_kralove-2021.xml
+data/nadf-full-ostrava-2021.xml
+data/nadf-full-plzen-2021.xml
+data/nadf-full-praha-2021.xml
+data/nadf-full-usti_nad_labem-2021.xml
+data/odbororg-full-brno-2021.xml
+data/odbororg-full-ceske_budejovice-2021.xml
+data/odbororg-full-hradec_kralove-2021.xml
+data/odbororg-full-ostrava-2021.xml
+data/odbororg-full-plzen-2021.xml
+data/odbororg-full-praha-2021.xml
+data/odbororg-full-usti_nad_labem-2021.xml
+data/orgzam-full-brno-2021.xml
+data/orgzam-full-ceske_budejovice-2021.xml
+data/orgzam-full-hradec_kralove-2021.xml
+data/orgzam-full-ostrava-2021.xml
+data/orgzam-full-plzen-2021.xml
+data/orgzam-full-praha-2021.xml
+data/orgzam-full-usti_nad_labem-2021.xml
+data/osznad-full-praha-2021.xml
+data/osznad-full-usti_nad_labem-2021.xml
+data/osznadf-full-plzen-2021.xml
+data/osznadf-full-praha-2021.xml
+data/oszpo-full-brno-2021.xml
+data/oszpo-full-ceske_budejovice-2021.xml
+data/oszpo-full-hradec_kralove-2021.xml
+data/oszpo-full-ostrava-2021.xml
+data/oszpo-full-plzen-2021.xml
+data/oszpo-full-praha-2021.xml
+data/oszpo-full-usti_nad_labem-2021.xml
+data/pobspolek-full-brno-2021.xml
+data/pobspolek-full-ceske_budejovice-2021.xml
+data/pobspolek-full-hradec_kralove-2021.xml
+data/pobspolek-full-ostrava-2021.xml
+data/pobspolek-full-plzen-2021.xml
+data/pobspolek-full-praha-2021.xml
+data/pobspolek-full-usti_nad_labem-2021.xml
+data/prisp-full-brno-2021.xml
+data/prisp-full-ceske_budejovice-2021.xml
+data/prisp-full-hradec_kralove-2021.xml
+data/prisp-full-ostrava-2021.xml
+data/prisp-full-plzen-2021.xml
+data/prisp-full-praha-2021.xml
+data/prisp-full-usti_nad_labem-2021.xml
+data/spolek-full-brno-2021.xml
+data/spolek-full-ceske_budejovice-2021.xml
+data/spolek-full-hradec_kralove-2021.xml
+data/spolek-full-ostrava-2021.xml
+data/spolek-full-plzen-2021.xml
+data/spolek-full-praha-2021.xml
+data/spolek-full-usti_nad_labem-2021.xml
+data/sro-full-brno-2021.xml
+data/sro-full-ceske_budejovice-2021.xml
+data/sro-full-hradec_kralove-2021.xml
+data/sro-full-ostrava-2021.xml
+data/sro-full-plzen-2021.xml
+data/sro-full-praha-2021.xml
+data/sro-full-usti_nad_labem-2021.xml
+data/svj-full-brno-2021.xml
+data/svj-full-ceske_budejovice-2021.xml
+data/svj-full-hradec_kralove-2021.xml
+data/svj-full-ostrava-2021.xml
+data/svj-full-plzen-2021.xml
+data/svj-full-praha-2021.xml
+data/svj-full-usti_nad_labem-2021.xml
+data/ustav-full-brno-2021.xml
+data/ustav-full-ceske_budejovice-2021.xml
+data/ustav-full-hradec_kralove-2021.xml
+data/ustav-full-ostrava-2021.xml
+data/ustav-full-plzen-2021.xml
+data/ustav-full-praha-2021.xml
+data/ustav-full-usti_nad_labem-2021.xml
+data/vos-full-brno-2021.xml
+data/vos-full-ceske_budejovice-2021.xml
+data/vos-full-hradec_kralove-2021.xml
+data/vos-full-ostrava-2021.xml
+data/vos-full-plzen-2021.xml
+data/vos-full-praha-2021.xml
+data/vos-full-usti_nad_labem-2021.xml
+data/zahrfos-full-brno-2021.xml
+data/zahrfos-full-ceske_budejovice-2021.xml
+data/zahrfos-full-ostrava-2021.xml
+data/zahrfos-full-plzen-2021.xml
+data/zahrfos-full-praha-2021.xml
+data/zahrfos-full-usti_nad_labem-2021.xml
+data/zajzdrpo-full-brno-2021.xml
+data/zajzdrpo-full-ceske_budejovice-2021.xml
+data/zajzdrpo-full-hradec_kralove-2021.xml
+data/zajzdrpo-full-ostrava-2021.xml
+data/zajzdrpo-full-plzen-2021.xml
+data/zajzdrpo-full-praha-2021.xml
+data/zajzdrpo-full-usti_nad_labem-2021.xml
+as-full-ostrava-2021.xml
