--- a/.gitignore
+++ b/.gitignore
@@ -391,3 +391,6 @@ data/zajzdrpo-full-plzen-2021.xml
 data/zajzdrpo-full-praha-2021.xml
 data/zajzdrpo-full-usti_nad_labem-2021.xml
 as-full-ostrava-2021.xml
+sro-full-ceske_budejovice-2021.xml
+sro-full-ostrava-2021.xml
+sro-full-praha-2021.xml
