add database function

--- a/.gitignore
+++ b/.gitignore
@@ -394,3 +394,4 @@ as-full-ostrava-2021.xml
 sro-full-ceske_budejovice-2021.xml
 sro-full-ostrava-2021.xml
 sro-full-praha-2021.xml
+templates/extract.html
