--- a/.gitignore
+++ b/.gitignore
@@ -395,3 +395,6 @@ sro-full-ceske_budejovice-2021.xml
 sro-full-ostrava-2021.xml
 sro-full-praha-2021.xml
 templates/extract.html
+__pycache__/db_creation.cpython-38.pyc
+__pycache__/download_files.cpython-38.pyc
+__pycache__/update_db.cpython-38.pyc
