--- a/.gitignore
+++ b/.gitignore
@@ -1,144 +1,9 @@
-data/as-actual-brno-2021.xml
-data/as-actual-ceske_budejovice-2021.xml
-data/as-actual-hradec_kralove-2021.xml
-data/as-actual-ostrava-2021.xml
-data/as-actual-plzen-2021.xml
-data/as-actual-praha-2021.xml
-data/as-actual-usti_nad_labem-2021.xml
-data/dr-actual-brno-2021.xml
-data/dr-actual-ceske_budejovice-2021.xml
-data/dr-actual-hradec_kralove-2021.xml
-data/dr-actual-ostrava-2021.xml
-data/dr-actual-plzen-2021.xml
-data/dr-actual-praha-2021.xml
-data/dr-actual-usti_nad_labem-2021.xml
-data/evrdrspol-actual-ostrava-2021.xml
-data/evrdrspol-actual-praha-2021.xml
-data/evrhzs-actual-hradec_kralove-2021.xml
-data/evrhzs-actual-ostrava-2021.xml
-data/evrhzs-actual-praha-2021.xml
-data/evrhzs-actual-usti_nad_labem-2021.xml
-data/evrspol-actual-brno-2021.xml
-data/evrspol-actual-ceske_budejovice-2021.xml
-data/evrspol-actual-hradec_kralove-2021.xml
-data/evrspol-actual-ostrava-2021.xml
-data/evrspol-actual-plzen-2021.xml
-data/evrspol-actual-praha-2021.xml
-data/evrspol-actual-usti_nad_labem-2021.xml
-data/ks-actual-brno-2021.xml
-data/ks-actual-ceske_budejovice-2021.xml
-data/ks-actual-hradec_kralove-2021.xml
-data/ks-actual-ostrava-2021.xml
-data/ks-actual-plzen-2021.xml
-data/ks-actual-praha-2021.xml
-data/ks-actual-usti_nad_labem-2021.xml
-data/nad-actual-brno-2021.xml
-data/nad-actual-ceske_budejovice-2021.xml
-data/nad-actual-hradec_kralove-2021.xml
-data/nad-actual-ostrava-2021.xml
-data/nad-actual-plzen-2021.xml
-data/nad-actual-praha-2021.xml
-data/nad-actual-usti_nad_labem-2021.xml
-data/nadf-actual-brno-2021.xml
-data/nadf-actual-ceske_budejovice-2021.xml
-data/nadf-actual-hradec_kralove-2021.xml
-data/nadf-actual-ostrava-2021.xml
-data/nadf-actual-plzen-2021.xml
-data/nadf-actual-praha-2021.xml
-data/nadf-actual-usti_nad_labem-2021.xml
-data/odbororg-actual-brno-2021.xml
-data/odbororg-actual-ceske_budejovice-2021.xml
-data/odbororg-actual-hradec_kralove-2021.xml
-data/odbororg-actual-ostrava-2021.xml
-data/odbororg-actual-plzen-2021.xml
-data/odbororg-actual-praha-2021.xml
-data/odbororg-actual-usti_nad_labem-2021.xml
-data/orgzam-actual-brno-2021.xml
-data/orgzam-actual-ceske_budejovice-2021.xml
-data/orgzam-actual-hradec_kralove-2021.xml
-data/orgzam-actual-ostrava-2021.xml
-data/orgzam-actual-plzen-2021.xml
-data/orgzam-actual-praha-2021.xml
-data/orgzam-actual-usti_nad_labem-2021.xml
-data/osznad-actual-praha-2021.xml
-data/osznad-actual-usti_nad_labem-2021.xml
-data/osznadf-actual-plzen-2021.xml
-data/osznadf-actual-praha-2021.xml
-data/oszpo-actual-brno-2021.xml
-data/oszpo-actual-ceske_budejovice-2021.xml
-data/oszpo-actual-hradec_kralove-2021.xml
-data/oszpo-actual-ostrava-2021.xml
-data/oszpo-actual-plzen-2021.xml
-data/oszpo-actual-praha-2021.xml
-data/oszpo-actual-usti_nad_labem-2021.xml
-data/pobspolek-actual-brno-2021.xml
-data/pobspolek-actual-ceske_budejovice-2021.xml
-data/pobspolek-actual-hradec_kralove-2021.xml
-data/pobspolek-actual-ostrava-2021.xml
-data/pobspolek-actual-plzen-2021.xml
-data/pobspolek-actual-praha-2021.xml
-data/pobspolek-actual-usti_nad_labem-2021.xml
-data/prisp-actual-brno-2021.xml
-data/prisp-actual-ceske_budejovice-2021.xml
-data/prisp-actual-hradec_kralove-2021.xml
-data/prisp-actual-ostrava-2021.xml
-data/prisp-actual-plzen-2021.xml
-data/prisp-actual-praha-2021.xml
-data/prisp-actual-usti_nad_labem-2021.xml
-data/spolek-actual-brno-2021.xml
-data/spolek-actual-ceske_budejovice-2021.xml
-data/spolek-actual-hradec_kralove-2021.xml
-data/spolek-actual-ostrava-2021.xml
-data/spolek-actual-plzen-2021.xml
-data/spolek-actual-praha-2021.xml
-data/spolek-actual-usti_nad_labem-2021.xml
-data/sro-actual-brno-2021.xml
-data/sro-actual-ceske_budejovice-2021.xml
-data/sro-actual-hradec_kralove-2021.xml
-data/sro-actual-ostrava-2021.xml
-data/sro-actual-plzen-2021.xml
-data/sro-actual-praha-2021.xml
-data/sro-actual-usti_nad_labem-2021.xml
-data/svj-actual-brno-2021.xml
-data/svj-actual-ceske_budejovice-2021.xml
-data/svj-actual-hradec_kralove-2021.xml
-data/svj-actual-ostrava-2021.xml
-data/svj-actual-plzen-2021.xml
-data/svj-actual-praha-2021.xml
-data/svj-actual-usti_nad_labem-2021.xml
-data/ustav-actual-brno-2021.xml
-data/ustav-actual-ceske_budejovice-2021.xml
-data/ustav-actual-hradec_kralove-2021.xml
-data/ustav-actual-ostrava-2021.xml
-data/ustav-actual-plzen-2021.xml
-data/ustav-actual-praha-2021.xml
-data/ustav-actual-usti_nad_labem-2021.xml
-data/vos-actual-brno-2021.xml
-data/vos-actual-ceske_budejovice-2021.xml
-data/vos-actual-hradec_kralove-2021.xml
-data/vos-actual-ostrava-2021.xml
-data/vos-actual-plzen-2021.xml
-data/vos-actual-praha-2021.xml
-data/vos-actual-usti_nad_labem-2021.xml
-data/zahrfos-actual-brno-2021.xml
-data/zahrfos-actual-ceske_budejovice-2021.xml
-data/zahrfos-actual-ostrava-2021.xml
-data/zahrfos-actual-plzen-2021.xml
-data/zahrfos-actual-praha-2021.xml
-data/zahrfos-actual-usti_nad_labem-2021.xml
-data/zajzdrpo-actual-brno-2021.xml
-data/zajzdrpo-actual-ceske_budejovice-2021.xml
-data/zajzdrpo-actual-hradec_kralove-2021.xml
-data/zajzdrpo-actual-ostrava-2021.xml
-data/zajzdrpo-actual-plzen-2021.xml
-data/zajzdrpo-actual-praha-2021.xml
-data/zajzdrpo-actual-usti_nad_labem-2021.xml
-justice.db
-justice.db-journal
+*.db*
+__pycache__/*
+*.log
+Scripts/*
 .vscode/settings.json
 debug.log
-data/temp-sro-actual-praha-2021.xml
-data/temp-sro-actual-praha-2021.xml.gz
 justice2.db
 bin/*
 bin/
@@ -148,256 +13,6 @@ data/*.xml
 data/*.xml.gz
 *.db*
 pyvenv.cfg
-__pycache__/app.cpython-38.pyc
-__pycache__/db_setup.cpython-38.pyc
-__pycache__/forms.cpython-38.pyc
-__pycache__/main.cpython-38.pyc
-__pycache__/models.cpython-38.pyc
-__pycache__/tables.cpython-38.pyc
-pyvenv.cfg
-pyvenv.cfg
-justice-testing.db
-as-actual-ostrava-2021.xml
-as-actual-ostrava-2021-test.xml
-Scripts/_asyncio.pyd
-Scripts/_bz2.pyd
-Scripts/_ctypes_test.pyd
-Scripts/_ctypes.pyd
-Scripts/_decimal.pyd
-Scripts/_elementtree.pyd
-Scripts/_hashlib.pyd
-Scripts/_lzma.pyd
-Scripts/_msi.pyd
-Scripts/_multiprocessing.pyd
-Scripts/_overlapped.pyd
-Scripts/_queue.pyd
-Scripts/_socket.pyd
-Scripts/_sqlite3.pyd
-Scripts/_ssl.pyd
-Scripts/_testbuffer.pyd
-Scripts/_testcapi.pyd
-Scripts/_testconsole.pyd
-Scripts/_testimportmultiple.pyd
-Scripts/_testinternalcapi.pyd
-Scripts/_testmultiphase.pyd
-Scripts/_tkinter.pyd
-Scripts/activate
-Scripts/activate_this.py
-Scripts/activate.bat
-Scripts/activate.fish
-Scripts/activate.ps1
-Scripts/activate.xsh
-Scripts/api-ms-win-core-console-l1-1-0.dll
-Scripts/api-ms-win-core-datetime-l1-1-0.dll
-Scripts/api-ms-win-core-debug-l1-1-0.dll
-Scripts/api-ms-win-core-errorhandling-l1-1-0.dll
-Scripts/api-ms-win-core-file-l1-1-0.dll
-Scripts/api-ms-win-core-file-l1-2-0.dll
-Scripts/api-ms-win-core-file-l2-1-0.dll
-Scripts/api-ms-win-core-handle-l1-1-0.dll
-Scripts/api-ms-win-core-heap-l1-1-0.dll
-Scripts/api-ms-win-core-interlocked-l1-1-0.dll
-Scripts/api-ms-win-core-libraryloader-l1-1-0.dll
-Scripts/api-ms-win-core-localization-l1-2-0.dll
-Scripts/api-ms-win-core-memory-l1-1-0.dll
-Scripts/api-ms-win-core-namedpipe-l1-1-0.dll
-Scripts/api-ms-win-core-processenvironment-l1-1-0.dll
-Scripts/api-ms-win-core-processthreads-l1-1-0.dll
-Scripts/api-ms-win-core-processthreads-l1-1-1.dll
-Scripts/api-ms-win-core-profile-l1-1-0.dll
-Scripts/api-ms-win-core-rtlsupport-l1-1-0.dll
-Scripts/api-ms-win-core-string-l1-1-0.dll
-Scripts/api-ms-win-core-synch-l1-1-0.dll
-Scripts/api-ms-win-core-synch-l1-2-0.dll
-Scripts/api-ms-win-core-sysinfo-l1-1-0.dll
-Scripts/api-ms-win-core-timezone-l1-1-0.dll
-Scripts/api-ms-win-core-util-l1-1-0.dll
-Scripts/api-ms-win-crt-conio-l1-1-0.dll
-Scripts/api-ms-win-crt-convert-l1-1-0.dll
-Scripts/api-ms-win-crt-environment-l1-1-0.dll
-Scripts/api-ms-win-crt-filesystem-l1-1-0.dll
-Scripts/api-ms-win-crt-heap-l1-1-0.dll
-Scripts/api-ms-win-crt-locale-l1-1-0.dll
-Scripts/api-ms-win-crt-math-l1-1-0.dll
-Scripts/api-ms-win-crt-multibyte-l1-1-0.dll
-Scripts/api-ms-win-crt-private-l1-1-0.dll
-Scripts/api-ms-win-crt-process-l1-1-0.dll
-Scripts/api-ms-win-crt-runtime-l1-1-0.dll
-Scripts/api-ms-win-crt-stdio-l1-1-0.dll
-Scripts/api-ms-win-crt-string-l1-1-0.dll
-Scripts/api-ms-win-crt-time-l1-1-0.dll
-Scripts/api-ms-win-crt-utility-l1-1-0.dll
-Scripts/concrt140.dll
-Scripts/deactivate.bat
-Scripts/libffi-7.dll
-Scripts/msvcp140_1.dll
-Scripts/msvcp140_2.dll
-Scripts/msvcp140.dll
-Scripts/pip-3.8.exe
-Scripts/pip.exe
-Scripts/pip3.8.exe
-Scripts/pip3.exe
-Scripts/pydoc.bat
-Scripts/pyexpat.pyd
-Scripts/python.exe
-Scripts/python3.dll
-Scripts/python38.dll
-Scripts/pythonw.exe
-Scripts/select.pyd
-Scripts/tcl86t.dll
-Scripts/tk86t.dll
-Scripts/ucrtbase.dll
-Scripts/unicodedata.pyd
-Scripts/vccorlib140.dll
-Scripts/vcomp140.dll
-Scripts/vcruntime140.dll
-Scripts/wheel-3.8.exe
-Scripts/wheel.exe
-Scripts/wheel3.8.exe
-Scripts/wheel3.exe
-Scripts/winsound.pyd
-Scripts/xlwings32-0.20.7.dll
-Scripts/xlwings64-0.20.7.dll
-data/as-full-brno-2021.xml
-data/as-full-ceske_budejovice-2021.xml
-data/as-full-hradec_kralove-2021.xml
-data/as-full-ostrava-2021.xml
-data/as-full-plzen-2021.xml
-data/as-full-praha-2021.xml
-data/as-full-usti_nad_labem-2021.xml
-data/dr-full-brno-2021.xml
-data/dr-full-ceske_budejovice-2021.xml
-data/dr-full-hradec_kralove-2021.xml
-data/dr-full-ostrava-2021.xml
-data/dr-full-plzen-2021.xml
-data/dr-full-praha-2021.xml
-data/dr-full-usti_nad_labem-2021.xml
-data/evrdrspol-full-ostrava-2021.xml
-data/evrdrspol-full-praha-2021.xml
-data/evrhzs-full-hradec_kralove-2021.xml
-data/evrhzs-full-ostrava-2021.xml
-data/evrhzs-full-praha-2021.xml
-data/evrhzs-full-usti_nad_labem-2021.xml
-data/evrspol-full-brno-2021.xml
-data/evrspol-full-ceske_budejovice-2021.xml
-data/evrspol-full-hradec_kralove-2021.xml
-data/evrspol-full-ostrava-2021.xml
-data/evrspol-full-plzen-2021.xml
-data/evrspol-full-praha-2021.xml
-data/evrspol-full-usti_nad_labem-2021.xml
-data/ks-full-brno-2021.xml
-data/ks-full-ceske_budejovice-2021.xml
-data/ks-full-hradec_kralove-2021.xml
-data/ks-full-ostrava-2021.xml
-data/ks-full-plzen-2021.xml
-data/ks-full-praha-2021.xml
-data/ks-full-usti_nad_labem-2021.xml
-data/nad-full-brno-2021.xml
-data/nad-full-ceske_budejovice-2021.xml
-data/nad-full-hradec_kralove-2021.xml
-data/nad-full-ostrava-2021.xml
-data/nad-full-plzen-2021.xml
-data/nad-full-praha-2021.xml
-data/nad-full-usti_nad_labem-2021.xml
-data/nadf-full-brno-2021.xml
-data/nadf-full-ceske_budejovice-2021.xml
-data/nadf-full-hradec_kralove-2021.xml
-data/nadf-full-ostrava-2021.xml
-data/nadf-full-plzen-2021.xml
-data/nadf-full-praha-2021.xml
-data/nadf-full-usti_nad_labem-2021.xml
-data/odbororg-full-brno-2021.xml
-data/odbororg-full-ceske_budejovice-2021.xml
-data/odbororg-full-hradec_kralove-2021.xml
-data/odbororg-full-ostrava-2021.xml
-data/odbororg-full-plzen-2021.xml
-data/odbororg-full-praha-2021.xml
-data/odbororg-full-usti_nad_labem-2021.xml
-data/orgzam-full-brno-2021.xml
-data/orgzam-full-ceske_budejovice-2021.xml
-data/orgzam-full-hradec_kralove-2021.xml
-data/orgzam-full-ostrava-2021.xml
-data/orgzam-full-plzen-2021.xml
-data/orgzam-full-praha-2021.xml
-data/orgzam-full-usti_nad_labem-2021.xml
-data/osznad-full-praha-2021.xml
-data/osznad-full-usti_nad_labem-2021.xml
-data/osznadf-full-plzen-2021.xml
-data/osznadf-full-praha-2021.xml
-data/oszpo-full-brno-2021.xml
-data/oszpo-full-ceske_budejovice-2021.xml
-data/oszpo-full-hradec_kralove-2021.xml
-data/oszpo-full-ostrava-2021.xml
-data/oszpo-full-plzen-2021.xml
-data/oszpo-full-praha-2021.xml
-data/oszpo-full-usti_nad_labem-2021.xml
-data/pobspolek-full-brno-2021.xml
-data/pobspolek-full-ceske_budejovice-2021.xml
-data/pobspolek-full-hradec_kralove-2021.xml
-data/pobspolek-full-ostrava-2021.xml
-data/pobspolek-full-plzen-2021.xml
-data/pobspolek-full-praha-2021.xml
-data/pobspolek-full-usti_nad_labem-2021.xml
-data/prisp-full-brno-2021.xml
-data/prisp-full-ceske_budejovice-2021.xml
-data/prisp-full-hradec_kralove-2021.xml
-data/prisp-full-ostrava-2021.xml
-data/prisp-full-plzen-2021.xml
-data/prisp-full-praha-2021.xml
-data/prisp-full-usti_nad_labem-2021.xml
-data/spolek-full-brno-2021.xml
-data/spolek-full-ceske_budejovice-2021.xml
-data/spolek-full-hradec_kralove-2021.xml
-data/spolek-full-ostrava-2021.xml
-data/spolek-full-plzen-2021.xml
-data/spolek-full-praha-2021.xml
-data/spolek-full-usti_nad_labem-2021.xml
-data/sro-full-brno-2021.xml
-data/sro-full-ceske_budejovice-2021.xml
-data/sro-full-hradec_kralove-2021.xml
-data/sro-full-ostrava-2021.xml
-data/sro-full-plzen-2021.xml
-data/sro-full-praha-2021.xml
-data/sro-full-usti_nad_labem-2021.xml
-data/svj-full-brno-2021.xml
-data/svj-full-ceske_budejovice-2021.xml
-data/svj-full-hradec_kralove-2021.xml
-data/svj-full-ostrava-2021.xml
-data/svj-full-plzen-2021.xml
-data/svj-full-praha-2021.xml
-data/svj-full-usti_nad_labem-2021.xml
-data/ustav-full-brno-2021.xml
-data/ustav-full-ceske_budejovice-2021.xml
-data/ustav-full-hradec_kralove-2021.xml
-data/ustav-full-ostrava-2021.xml
-data/ustav-full-plzen-2021.xml
-data/ustav-full-praha-2021.xml
-data/ustav-full-usti_nad_labem-2021.xml
-data/vos-full-brno-2021.xml
-data/vos-full-ceske_budejovice-2021.xml
-data/vos-full-hradec_kralove-2021.xml
-data/vos-full-ostrava-2021.xml
-data/vos-full-plzen-2021.xml
-data/vos-full-praha-2021.xml
-data/vos-full-usti_nad_labem-2021.xml
-data/zahrfos-full-brno-2021.xml
-data/zahrfos-full-ceske_budejovice-2021.xml
-data/zahrfos-full-ostrava-2021.xml
-data/zahrfos-full-plzen-2021.xml
-data/zahrfos-full-praha-2021.xml
-data/zahrfos-full-usti_nad_labem-2021.xml
-data/zajzdrpo-full-brno-2021.xml
-data/zajzdrpo-full-ceske_budejovice-2021.xml
-data/zajzdrpo-full-hradec_kralove-2021.xml
-data/zajzdrpo-full-ostrava-2021.xml
-data/zajzdrpo-full-plzen-2021.xml
-data/zajzdrpo-full-praha-2021.xml
-data/zajzdrpo-full-usti_nad_labem-2021.xml
-as-full-ostrava-2021.xml
-sro-full-ceske_budejovice-2021.xml
-sro-full-ostrava-2021.xml
-sro-full-praha-2021.xml
-templates/extract.html
 __pycache__/db_creation.cpython-38.pyc
 __pycache__/download_files.cpython-38.pyc
 __pycache__/update_db.cpython-38.pyc
