--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 lxml==4.9.3
 MarkupSafe==2.1.3
-psycopg2-binary==2.9.7
+psycopg2
 pytz==2023.3
 requests==2.31.0
 Send2Trash==1.8.2
