--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,6 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 lxml==4.9.3
 MarkupSafe==2.1.3
-psycopg2
 pytz==2023.3
 requests==2.31.0
 Send2Trash==1.8.2
@@ -22,3 +21,6 @@ typing_extensions==4.7.1
 urllib3==2.0.4
 Werkzeug==2.3.7
 WTForms==3.0.1
+gunicorn>=21.2,<22.0
+psycopg; sys_platform == "linux"
+psycopg[binary]; sys_platform != "linux"
