--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,6 @@ urllib3==2.0.4
 Werkzeug==2.3.7
 WTForms==3.0.1
 gunicorn>=21.2,<22.0
+psycopg2;
 psycopg; sys_platform == "linux"
 psycopg[binary]; sys_platform != "linux"
